@startuml CD_03_DettaglioClient
' Descrizione del diagramma:
' Questo Diagramma delle Classi descrive nel dettaglio il modulo Client e la sua architettura interna.
'
' Componenti principali:
' - ApplicazioneClient: Punto di ingresso dell'interfaccia JavaFX.
' - ConfigurazioneClient: Carica le impostazioni iniziali (IP, Porta).
' - ControllerAccesso: Gestisce le viste di Login e Registrazione. 
' - ControllerGioco: Gestisce l'interfaccia della partita, il timer, le parole cifrate e gli esiti.
' - ControllerStorico: Visualizza in una tabella (TableView) le partite precedenti dell'utente.
' - ConnessioneServer: Servizio che mantiene vivo il socket, inoltra i messaggi tramite invia() e 
'   resta in ascolto di risposte dal server smistandole tramite callback (Consumer).
skinparam classAttributeIconSize 0

title CD_03 — Dettaglio Modulo Client (package reali da Doxygen)

class ApplicazioneClient <<JavaFX Application>> {
  +start(primaryStage : Stage) <<throws Exception>>
  +{static} main(args : String[])
}

package "util" {
  class ConfigurazioneClient {
    -props : Properties = Properties()
    -{static} LOGGER : Logger
    +ConfigurazioneClient()
    +getServerIp() : String
    +getServerPort() : int
  }
}

package "service" {
  class ConnessioneServer {
    -socket : Socket
    -out : ObjectOutputStream
    -in : ObjectInputStream
    -connesso : volatile boolean = false
    -callbackMessaggio : Consumer<Messaggio>
    -callbackDisconnessione : Runnable
    -{static} LOGGER : Logger
    +connetti(host : String, porta : int) <<throws IOException>>
    -avviaThreadLettura()
    +invia(msg : Messaggio) : synchronized
    +disconnetti()
    +isConnesso() : boolean
    +setMessageCallback(callback : Consumer<Messaggio>)
    +setDisconnectCallback(callback : Runnable)
  }
}

package "controller" {
  class ControllerAccesso <<Initializable>> {
    -campoNomeUtente : TextField
    -passwordField : PasswordField
    -confirmField : PasswordField
    -confirmBox : VBox
    -formTitle, errorLabel, connectionLabel : Label
    -pulsantePrincipale, switchBtn : Button
    -isRegistrationMode : boolean = false
    -connessione : ConnessioneServer
    -serverIp : String
    -serverPort : int
    -{static} LOGGER : Logger
    +initialize(location : URL, resources : ResourceBundle)
    -tryConnect()
    -handlePrimary()
    -handleSwitch()
    -gestisciMessaggioServer(msg : Messaggio)
    -gestisciRispostaLogin(resp : RispostaAutenticazione)
    -gestisciRispostaRegistrazione(resp : RispostaAutenticazione)
    -mostraErrore(msg : String)
    -clearError()
    -vaiAGioco(nomeUtente : String, conn : ConnessioneServer,\n  waitingMsg : String, pendingMessages : Queue<Messaggio>)
  }

  class ControllerGioco {
    -nomeUtente : String
    -connessione : ConnessioneServer
    -etichettaGiocatore, etichettaStato, dettaglioAttesa : Label
    -etichettaTimer, etichettaParoleCifrate, etichettaFeedback : Label
    -emojiRisultato, titoloRisultato, dettaglioRisultato : Label
    -waitingPane, gamePane, pannelloRisultato : VBox
    -areaTesto : TextArea
    -campoRisposta : TextField
    -timelineTimer : Timeline
    -secondiRimanenti : int
    -tempoInizioSfida : long
    -{static} LOGGER : Logger
    +init(nomeUtente : String, connessione : ConnessioneServer, waitingMsg : String)
    +consegnaMessaggio(msg : Messaggio)
    -gestisciMessaggioServer(msg : Messaggio)
    -avviaSfida(carico : PayloadSfida)
    -avviaCountdown()
    -gestisciInvioRisposta()
    -mostraRisultato(result : RisultatoSfida)
    -gestisciErroreServer(errorMsg : String)
    -gestisciNuovaPartita()
    -gestisciVisualizzaStorico()
    -mostraAttesa()
    -mostraGioco()
    -mostraPannelloRisultato()
    -mostraFeedback(msg : String)
    -setPaneVisible(pane : VBox, visible : boolean)
  }

  class ControllerStorico {
    -nomeUtente : String
    -connessione : ConnessioneServer
    -stageProprietario : Stage
    -historyTable : TableView<VoceStorico>
    -dateCol, opponentCol, outcomeCol, wordCol : TableColumn<VoceStorico,String>
    -timeCol : TableColumn<VoceStorico,Long>
    -{static} LOGGER : Logger
    +init(nomeUtente : String, connessione : ConnessioneServer,\n  owner : Stage, root : Parent)
    -configuraTabella()
    -gestisciMessaggio(msg : Messaggio)
    -gestisciIndietro()
    -formatOutcome(esito : String) : String
  }
}

ApplicazioneClient --> ControllerAccesso : carica login.fxml
ApplicazioneClient --> ConfigurazioneClient

ControllerAccesso --> ConnessioneServer : crea/usa\n(tryConnect)
ControllerAccesso ..> ControllerGioco : vaiAGioco()\ncarica game.fxml + init()
ControllerGioco --> ConnessioneServer : connessione
ControllerGioco ..> ControllerStorico : gestisciVisualizzaStorico()\ncarica history.fxml + init()
ControllerStorico --> ConnessioneServer : connessione

note right of ConnessioneServer
  OOS creato prima di OIS,
  con flush() immediato
  (IF-C02). invia() è
  synchronized + out.reset()
  (IF-C03). avviaThreadLettura()
  invoca callbackMessaggio per
  ogni Messaggio ricevuto e
  callbackDisconnessione alla
  chiusura della connessione.
end note

note right of ControllerAccesso
  implements Initializable.
  initialize() legge porta/IP
  da ConfigurazioneClient.
  vaiAGioco(): gestisce la coda
  pendingMessages (Queue<Messaggio>)
  per il fix della race condition
  WAITING -> CHALLENGE_START
  (IF-C07/IF-C08).
end note

note right of ControllerGioco
  init() (non Initializable):
  riceve nomeUtente, connessione
  e waitingMsg dal controller
  precedente. timelineTimer:
  KeyFrame ogni secondo; sotto
  i 10s il testo diventa rosso.
  gestisciErroreServer() gestisce
  ERROR "disconnesso" con Timeline
  one-shot 3s -> gestisciNuovaPartita().
end note

note right of ControllerStorico
  init() riceve anche lo Stage
  proprietario e il Parent root
  per gestisciIndietro() (ritorno
  al pannello di attesa).
  formatOutcome() converte
  'win'/'loss'/'draw' in testo
  leggibile per la colonna esito.
end note
@enduml
